# data-management-assignment

./: dev.ipynb  pyproject.toml
er_diagrams/: analytical_database_XBGC.mermaid  relational_database_XBGC.mermaid  relational_database_ruleX.mermaid
sql/: data.sql  database_creation.sql  query_1.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql
